@@ -7,6 +7,8 @@ git-annex (5.20140614) UNRELEASED; urgency=medium
   * Windows: Fix opening file browser from webapp when repo is in a
     directory with spaces.
   * Windows: Assistant now logs to daemon.log.
+  * Fix bug in annex.queuesize calculation that caused much more
+    queue flushing than necessary.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 16 Jun 2014 11:28:42 -0400
 
